# sgd-python3

./: .gitignore  README.md  default.nix  pyproject.toml  requirements.txt  sgd-experiments.ipynb  sgd.py
