[tool.poetry]
name = "sgd-python3"
version = "1.0.0"
description = "Crude implementation of the SGD algorithm in Python"
authors = ["Josiah Berkebile <praenato14@gmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
